# twisterDBA

./: .editorconfig  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  bacon.toml  deny.toml  rustfmt.toml
.githooks/: commit-msg  pre-commit
.opencode/commands/: derive.md  opsx-bulk-archive.md  opsx-continue.md  opsx-ff.md  opsx-new.md  opsx-onboard.md  opsx-verify.md
.opencode/skills/: cargo-verify  derive-from-doc  openspec-apply-change  openspec-archive-change  openspec-bulk-archive-change  openspec-continue-change  openspec-explore  openspec-ff-change  openspec-new-change  openspec-propose  openspec-verify-change  rust-code-audit
ai-specs/agents/: rust-db-developer.md  rust-tui-developer.md
ai-specs/scripts/: cargo-verify.sh
ai-specs/skills/cargo-verify/: SKILL.md
ai-specs/skills/commit/: SKILL.md
ai-specs/skills/derive-from-doc/: SKILL.md
ai-specs/skills/openspec-bulk-archive-change/: SKILL.md
ai-specs/skills/openspec-continue-change/: SKILL.md
ai-specs/skills/openspec-ff-change/: SKILL.md
openspec/: config.yaml
src/: app.rs  events.rs  explorer.rs  keymap_help.rs  main.rs  result.rs  state.rs  theme.rs  ui.rs
src/config/: mod.rs
src/db/: backend.rs  client.rs  mod.rs  mysql.rs  pg_exec.rs  pg_schema.rs  sqlite.rs
src/editor/: buffer.rs  history.rs  mod.rs  render.rs  tree.rs
src/lua/: api.rs  hooks.rs  mod.rs
src/state/: connection.rs  events.rs  mod.rs  mode.rs  output.rs  popup.rs  session.rs
src/ui/: dialog.rs  editor.rs  explorer.rs  mod.rs  output.rs  popup.rs  result.rs  status.rs  utils.rs
(+103 files in other folders)
