[package]
name = "twisterDBA"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.30.1"
sqlx = { version = "0.9.0", features = ["postgres", "mysql", "sqlite", "runtime-tokio", "tls-rustls"] }
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = "0.7"
anyhow = "1"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
secrecy = "0.8"
unicode-width = "0.1"
unicode-segmentation = "1"
futures-util = "0.3"
csv = "1"
arboard = "3"
toml = "0.8"
dirs = "5"
tree-sitter = "0.24"
tree-sitter-sequel = "0.3"
keyring = "3"
mlua = { version = "0.10", features = ["luajit", "vendored", "serialize"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
wildcard_imports = "warn"
todo = "warn"
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"
missing_docs_in_private_items = "allow"
module_name_repetitions = "allow"

[build-dependencies]
cc = "1"
